Fixed border radion on mobile.

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -36,6 +36,8 @@
       -moz-transform: scale(1.1);
       -webkit-transform: scale(1.1);
       transform: scale(1.1);
+      border-top-left-radius: 13px;
+      border-top-right-radius: 13px;
     }
 
     h2 {
